# swagger.js
@@ -1,12 +1,31 @@
+// const swaggerAutogen = require('swagger-autogen')();
+
+// const doc = {
+//     info: {
+//         title: 'CSE341 API',
+//         description: 'API documentation for CSE341 project',
+//     },
+//     host: 'localhost:3000',
+//     schemes: ['https', "http"],
+// };
+
+// const outputFile = './swagger.json';
+// const endpointsFiles = ['./routes/index.js'];
+
+// app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+
+// swaggerAutogen(outputFile, endpointsFiles, doc);
+
 const swaggerAutogen = require('swagger-autogen')();
 
 const doc = {
-    info: {
-        title: 'CSE341 API',
-        description: 'API documentation for CSE341 project',
-    },
-    host: 'localhost:3001',
-    schemes: ['https', "http"],
+  info: {
+    title: 'CSE341 API',
+    description: 'API documentation for CSE341 project',
+  },
+  host: 'localhost:3000',
+  schemes: ['http', 'https'],
 };
 
 const outputFile = './swagger.json';
